rename split function

--- a/decode_load_1vs2.ipynb
+++ b/decode_load_1vs2.ipynb
@@ -88,7 +88,7 @@
     "    print(isub)\n",
     "    xdata,ydata = exp.load_eeg(isub)\n",
     "    xdata,ydata = wrangl.group_labels(xdata,ydata)\n",
-    "    for X_train_all, X_test_all, y_train, y_test in wrangl.train_test_split(xdata,ydata):\n",
+    "    for X_train_all, X_test_all, y_train, y_test in wrangl.split_data(xdata,ydata):\n",
     "        X_train_all, X_test_all, y_train, y_test = wrangl.bin_and_balance_data(X_train_all, X_test_all, y_train, y_test) \n",
     "        y_test_shuffle = np.random.permutation(y_test)\n",
     "        for X_train, X_test in wrangl.roll_over_time(X_train_all, X_test_all):\n",
