--- a/decode_load_1vs3.ipynb
+++ b/decode_load_1vs3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-14T16:17:41.263080Z",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-14T16:17:44.497436Z",
@@ -28,14 +28,14 @@
    },
    "outputs": [],
    "source": [
-    "experiment_name = '1801'\n",
-    "data_dir = f'./data/{experiment_name}'\n",
-    "exp = eeg_decoder.Experiment(experiment_name,data_dir,test=False)"
+    "experiment_name = 'test_exp'\n",
+    "data_dir = f'./test_data/{experiment_name}'\n",
+    "exp = eeg_decoder.Experiment(experiment_name,data_dir,dev=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-29T16:46:28.129185Z",
@@ -56,23 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-29T16:47:42.756967Z",
      "start_time": "2020-03-29T16:46:28.662239Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for isub in range(exp.nsub):\n",
     "    print(isub)\n",
@@ -178,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   },
   "varInspector": {
    "cols": {
